<resources>
    <string name="app_name">iDoctor</string>
    <string name="my_Online_Doctor">my Online Doctor</string>
    <string name="my_calendar">My calendar</string>
    <string name="hospitals">Hospitals</string>
    <string name="dr_s_appointment">Dr\'s appointment</string>
    <string name="online_therapy">Online Therapy</string>
    <string name="emergency">Emergency</string>
    <string name="prescription">Prescription</string>
    <string name="therapy">therapy</string>
    <string name="medication">medication</string>
    <string name="calendar">calendar</string>
    <string name="idoctor">idoctor</string>
    <string name="legal_support">Legal Support</string>
    <string name="group_therapy">Group Therapy</string>
    <string name="schedule_check_up">Schedule Check up</string>
    <string name="welcome_to_your_activities">Welcome to your activities</string>
    <string name="bg">bg</string>
    <string name="check_my_prescription">Check my prescription</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="book_therapy_session">Book Therapy Session</string>
    <string name="nairobi_hospital">Nairobi Hospital</string>
    <string name="call">call</string>
    <string name="nairobi">Nairobi</string>
    <string name="topic">Topic</string>
    <string name="lead_doctor">Lead doctor</string>
    <string name="date">Date</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="zoom">zoom</string>
    <string name="doctors_name">Doctors name</string>
    <string name="here_from_me">Here from me</string>
    <string name="hospital_name">Hospital Name / Branch /town</string>
    <string name="report_your_case_here">Report your case Here</string>
    <string name="type_of_case">Type of Case</string>
    <string name="charges_or_abuse_or_sexual_or_mistreat">Charges or Abuse or sexual or Mistreat</string>
    <string name="date_of_occurrence">Date / Month / Year</string>
    <string name="date_occured">Date of Incident</string>
    <string name="who_was_involve_in_the_case">Who was involve in the case?</string>
    <string name="patient_doctorb_manager_security">Patient/ doctor/ manager / security ?</string>
    <string name="submit_case">Submit Case</string>
    <string name="brief_description">Brief Description</string>
    <string name="brief_description_of_the_case">Brief Description of the case</string>
    <string name="law">Law</string>
    <string name="make_an_appointment">Make an Appointment</string>
    <string name="your_full_names">Your Full Names</string>
    <string name="official_names">Official Names</string>
    <string name="you_have_your_nhif_card">You have your NHIF card?</string>
    <string name="yes_or_no">Yes or No</string>
    <string name="reason_for_appointment">Reason for appointment</string>
    <string name="check_up_scanning">Check up? scanning</string>
    <string name="your_date_of_availability">Your Date of availability</string>
    <string name="date_month_year">Date / Month / Year</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phonenumber">Your PhoneNumber</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="get_prescription">get prescription</string>
    <string name="username">UserName:</string>
    <string name="administered">Administered</string>
    <string name="duration">Duration</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="administration_times">Administration times</string>
    <string name="medicine">Medicine</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_idoctor">welcome to iDoctor</string>
    <string name="get_all_your_medication_online">Get all your medication online</string>
    <string name="usernameSignUP">UserName</string>
    <string name="your_age">Your age</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number_premium_users">Phone number -premium users-</string>
    <string name="create_account_user">create account</string>
    <string name="member_login">Member? Login</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter UserName</string>
    <string name="login">Login</string>
    <string name="Emergency">Emergency</string>
    <string name="sign_up">sign up</string>
    <string name="login_to_idoctor">Login to iDoctor</string>
    <string name="med_name">Med Name:</string>
    <string name="view_and_book">View and Book</string>
    <string name="dr_s_profile_and_contact">Dr. \'s Profile and Contact</string>
    <string name="health_is_wealth">Health is wealth</string>
    <string name="quote">Quote</string>
    <string name="book_therapy">Book Therapy</string>
    <string name="book_check_up">Book Check up</string>
</resources>