<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/welcome_to_idoctor"/>

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="italic"
        android:text="@string/get_all_your_medication_online"/>
    <ImageView
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/group1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="5dp"/>

    <EditText
        android:id="@+id/et_userName_signup"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/usernameSignUP"/>
    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/your_age"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_premium_users"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/create_account_user"/>
    <TextView
        android:id="@+id/tv_member_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/member_login"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"/>

</androidx.appcompat.widget.LinearLayoutCompat>