<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    app:cardElevation="6dp"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_county"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/nairobi"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        
        <TextView
            android:id="@+id/tv_emergency_hosp_town"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/nairobi_hospital"
            android:layout_weight="2"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_call_emergency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:text="@string/call"
            android:layout_weight="1"
            android:textStyle="bold"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>