<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IDoctorActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_DocProfile_chat"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/doctor5"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/scode_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_DocProfile_chat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dr_s_profile_and_contact"
        android:textColor="@color/black" />

    <RelativeLayout
        android:id="@+id/relative_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scode_profile"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chris Morris"
                android:textColor="@color/black"
                android:textSize="26sp" />

        </LinearLayout>

    </RelativeLayout>


    <View
        android:layout_below="@+id/scode_profile"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relative_name"
        android:background="@color/underline" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relative_house_no"
        android:background="@color/underline" />

    <RelativeLayout
        android:id="@+id/relative_house_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_name"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/country_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_is_wealth"
                android:textColor="@color/black"
                android:textSize="26sp" />
        </LinearLayout>

    </RelativeLayout>
    <Button
        android:layout_below="@id/relative_house_no"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tbn_bookTherapy_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_therapy"/>

    <Button
        android:id="@+id/tbn_bookCheckup_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbn_bookTherapy_doctor"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/book_check_up" />


</RelativeLayout>